samples/_failures_safe/1761501838_0c3620_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04b094f7.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | const char* state
      | ^~~~~
